--- a/BePartner_App_Mid/Views/AD_Home/All_Employee.cshtml
+++ b/BePartner_App_Mid/Views/AD_Home/All_Employee.cshtml
@@ -29,9 +29,11 @@
 
         <h6 class="m-0 font-weight-bold text-primary">Employee list</h6>
 
-        <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
-            <i class="fas fa-download fa-sm text-white-50"></i> Download
-        </a>
+        <form action="/AD_Home/Export_all_valid_Employees" method="post">
+
+            <input type="submit" value="Download" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm" />
+
+        </form>
     </div>
     <div class="card-body">
         <div class="table-responsive">
@@ -46,6 +48,7 @@
                         <th>Security key</th>
                         <th>Gender</th>
                         <th>Address</th>
+                        <th>Account Status</th>
                     </tr>
                 </thead>
 
@@ -61,6 +64,10 @@
                             <td>@AD.Security_key</td>
                             <td>@AD.Gender</td>
                             <td>@AD.Address</td>
+                            <td>
+                                <a class="btn btn-warning" href="@Url.Action("EmployeesInvalid","AD_Home",new {id = @AD.Nid})">Deactive</a>
+
+                            </td>
                         </tr>
                     }
                 </tbody>
