--- a/BePartner_App_Mid/Views/S_Admin/login_S.cshtml
+++ b/BePartner_App_Mid/Views/S_Admin/login_S.cshtml
@@ -11,8 +11,11 @@
 
 <html>
 <body>
+    
+    
 
     <div class="container ad-continer taransparent">
+
         <center>
             <img class="img-fluid" src="~/Img/title_logo.png" style="height: 150px; width: 160px; padding: 20px;">
             <h2> Admin Login</h2>
@@ -58,8 +61,11 @@
         </form>
 
     </div>
-    <center><h5 class="text-success">@ViewBag.Message</h5></center>
-    
+    <center>
+        <h5 class="text-danger">@ViewBag.Message</h5>
+        <h5 class="text-danger">@ViewBag.dltMessage</h5>
+    </center>
+
 
 </body>
 </html>
