--- a/BePartner_App_Mid/Views/AD_Home/AD_Notification.cshtml
+++ b/BePartner_App_Mid/Views/AD_Home/AD_Notification.cshtml
@@ -1,7 +1,4 @@
-﻿
-@{
-    ViewBag.Title = "AD_Notification";
-}
+
 @{
     Layout = "~/Views/AD_Home/_AD_Layout.cshtml";
 }
@@ -16,33 +13,47 @@
     <div class="card-header py-3 d-sm-flex sa_align-items-center mb-4 justify-content-between ">
         <h6 class="m-0 font-weight-bold text-primary">New Employees</h6>
 
-        <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
-            <i class="fas fa-download fa-sm text-white-50"></i> Download
-        </a>
+        <form action="/AD_Home/Export_all_new_Employees" method="post">
+
+            <input type="submit" value="Download" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm" />
+
+        </form>
     </div>
     <div class="card-body">
         <div class="table-responsive">
             <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                 <thead>
                     <tr>
-                        <th>Name</th>
-                        <th>Position</th>
-                        <th>Office</th>
-                        <th>Age</th>
-                        <th>Start date</th>
-                        <th>Salary</th>
+                        <th>First Name</th>
+                        <th>Last Name</th>
+                        <th>Email</th>
+                        <th>Phone</th>
+                        <th>NID</th>
+                        <th>Address</th>
+                        <th>Security key</th>
+                        <th>Gender</th>
+                        <th>Account Status</th>
                     </tr>
                 </thead>
 
                 <tbody>
-                    <tr>
-                        <td>Tiger Nixon</td>
-                        <td>System Architect</td>
-                        <td>Edinburgh</td>
-                        <td>61</td>
-                        <td>2011/04/25</td>
-                        <td>$320,800</td>
-                    </tr>
+                    @foreach (var IN in Model)
+                    {
+                        <tr>
+                            <td>@IN.Emp_FirstName</td>
+                            <td>@IN.Emp_LastName</td>
+                            <td>@IN.Emp_Email</td>
+                            <td>@IN.Emp_Phone</td>
+                            <td>@IN.Emp_Nid</td>
+                            <td>@IN.Emp_Address</td>
+                            <td>@IN.Emp_Security_key</td>
+                            <td>@IN.Emp_Gender</td>
+                            <td>
+                                <a class="btn btn-success" href="@Url.Action("EmployeesValid","AD_Home",new {id = @IN.Emp_Nid})">Active</a>
+
+                            </td>
+                        </tr>
+                    }
                 </tbody>
             </table>
         </div>
@@ -55,9 +66,11 @@
     <div class="card-header py-3 d-sm-flex sa_align-items-center mb-4 justify-content-between ">
         <h6 class="m-0 font-weight-bold text-primary">New Investors</h6>
 
-        <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
-            <i class="fas fa-download fa-sm text-white-50"></i> Download
-        </a>
+        <form action="/AD_Home/Export_all_New_Investors" method="post">
+
+            <input type="submit" value="Download" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm" />
+
+        </form>
     </div>
     <div class="card-body">
         <div class="table-responsive">
@@ -81,16 +94,19 @@
                     @foreach (var IN in Model)
                     {
                         <tr>
-                            <td>@IN.FirstName</td>
-                            <td>@IN.LastName</td>
+                            <td>@IN.In_FirstName</td>
+                            <td>@IN.In_LastName</td>
                             <td>@IN.In_Email</td>
-                            <td>@IN.Phone</td>
-                            <td>@IN.Nid</td>
-                            <td>@IN.OrgName</td>
-                            <td>@IN.Tin</td>
-                            <td>@IN.OrgSite</td>
-                            <td>@IN.OrgLocation</td>
-                            <td><input type="Submit" value="Active" class="btn btn-success"></td>
+                            <td>@IN.In_Phone</td>
+                            <td>@IN.In_Nid</td>
+                            <td>@IN.In_OrgName</td>
+                            <td>@IN.In_Tin</td>
+                            <td>@IN.In_OrgSite</td>
+                            <td>@IN.In_OrgLocation</td>
+                            <td>
+                                <a class="btn btn-success" href="@Url.Action("InvestorsValid","AD_Home",new {id = @IN.In_Nid})">Active</a>
+
+                            </td>
                         </tr>
                     }
                 </tbody>
@@ -105,37 +121,49 @@
     <div class="card-header py-3 d-sm-flex sa_align-items-center mb-4 justify-content-between ">
         <h6 class="m-0 font-weight-bold text-primary">New Enterpreneurs</h6>
 
-        <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
-            <i class="fas fa-download fa-sm text-white-50"></i> Download
-        </a>
+        <form action="/AD_Home/Export_all_New_Enterpreneurs" method="post">
+
+            <input type="submit" value="Download" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm" />
+
+        </form>
     </div>
     <div class="card-body">
         <div class="table-responsive">
-            <thead>
-                <tr>
-                    <th>First Name</th>
-                    <th>Last Name</th>
-                    <th>Email</th>
-                    <th>Phone</th>
-                    <th>NID</th>
-                    <th>Occupation</th>
-                    <th>Gender</th>
-                    <th>Address</th>
-                </tr>
-            </thead>
+            <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                <thead>
+                    <tr>
+                        <th>First Name</th>
+                        <th>Last Name</th>
+                        <th>Email</th>
+                        <th>Phone</th>
+                        <th>NID</th>
+                        <th>Occupation</th>
+                        <th>Gender</th>
+                        <th>Address</th>
+                        <th>Account Status</th>
+                    </tr>
+                </thead>
 
-            <tbody>
-                <tr>
-                    <th>First Name</th>
-                    <th>Last Name</th>
-                    <th>Email</th>
-                    <th>Phone</th>
-                    <th>NID</th>
-                    <th>Occupation</th>
-                    <th>Gender</th>
-                    <th>Address</th>
-                </tr>
-            </tbody>
+                <tbody>
+                    @foreach (var IN in Model)
+                    {
+                        <tr>
+                            <td>@IN.En_FirstName</td>
+                            <td>@IN.En_LastName</td>
+                            <td>@IN.En_Email</td>
+                            <td>@IN.En_Phone</td>
+                            <td>@IN.En_Nid</td>
+                            <td>@IN.En_Occupation</td>
+                            <td>@IN.En_Gender</td>
+                            <td>@IN.En_Address</td>
+                            <td>
+                                <a class="btn btn-success" href="@Url.Action("EntrepreneursValid","AD_Home",new {id = @IN.En_Nid})">Active</a>
+
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
         </div>
     </div>
 </div>
